Add Deq_solver interface class together with SOFTSUSY classes. The SOFTSUSY classes are needed because of DoubleVector and the loop functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,26 @@
 bin_PROGRAMS = flexisusy
 
-AM_CXXFLAGS = -ggdb -Wall -pedantic -std=c++98 -Wextra -Wcast-qual -Wcast-align -Woverloaded-virtual -Wnon-virtual-dtor -Wfloat-equal
+AM_CXXFLAGS = -ggdb -Wall -pedantic -Wextra -Wcast-qual -Wcast-align -Woverloaded-virtual -Wnon-virtual-dtor -Wfloat-equal
 
 AM_CFLAGS =
 
-flexisusy_LDADD =
+flexisusy_LDADD = @FLIBS@
 
 flexisusy_SOURCES = \
-	main.cpp
+	main.cpp \
+	def.h \
+	def.cpp \
+	deq_solver.hpp \
+	dilog.h \
+	dilog.f \
+	linalg.h \
+	linalg.cpp \
+	mycomplex.h \
+	numerics.h \
+	numerics.cpp \
+	rge.h \
+	rge.cpp \
+	utils.h \
+	utils.cpp \
+	two_scale_solver.hpp \
+	two_scale_solver.cpp
