remove unused MssmSusy class from the SM module

--- a/models/sm/Makefile.am
+++ b/models/sm/Makefile.am
@@ -7,6 +7,4 @@ run_LDADD = @FLIBS@ $(top_srcdir)/src/libflexisusy.a
 run_SOURCES = \
 	main.cpp \
 	sm.cpp \
-	sm.hpp \
-	susy.cpp \
-	susy.hpp
+	sm.hpp
