--- a/configure.ac
+++ b/configure.ac
@@ -23,5 +23,6 @@ AC_CONFIG_FILES([doc/Makefile])
 AC_CONFIG_FILES([test/Makefile])
 AC_CONFIG_FILES([models/Makefile])
 AC_CONFIG_FILES([models/sm/Makefile])
+AC_CONFIG_FILES([models/mssm/Makefile])
 
 AC_OUTPUT
