Make Deq_solver a non-implemented template class. Replace it's former sub-classes by specialized templates.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,5 +18,4 @@ libflexisusy_a_SOURCES = \
 	rge.cpp \
 	utils.h \
 	utils.cpp \
-	two_scale_solver.hpp \
-	two_scale_solver.cpp
+	two_scale_solver.hpp
