remove unused classes remove .h files from source code dependencies, because they are added automatically

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,20 +2,10 @@
 noinst_LIBRARIES = libflexisusy.a
 
 libflexisusy_a_SOURCES = \
-	def.h \
 	def.cpp \
-	deq_solver.hpp \
-	dilog.h \
 	dilog.f \
-	linalg.h \
 	linalg.cpp \
-	lowe.h \
 	lowe.cpp \
-	mycomplex.h \
-	numerics.h \
 	numerics.cpp \
-	rge.h \
 	rge.cpp \
-	utils.h \
-	utils.cpp \
-	two_scale_solver.hpp
+	utils.cpp
