convert StandardModel class into a specialized template that inherits from RGE

--- a/models/sm/Makefile.am
+++ b/models/sm/Makefile.am
@@ -6,5 +6,5 @@ run_LDADD = @FLIBS@ $(top_srcdir)/src/libflexisusy.a
 
 run_SOURCES = \
 	main.cpp \
-	sm.cpp \
-	sm.hpp
+	sm_two_scale.cpp \
+	sm_two_scale.hpp
