move MSSM test from the mssm/test/ directory into the mssm/ directory to avoid unnecessary compilation (or another convenience library)

--- a/models/mssm/Makefile.am
+++ b/models/mssm/Makefile.am
@@ -1,13 +1,25 @@
-SUBDIRS = test
 
-AM_CPPFLAGS = -I$(top_srcdir)/src
+AM_CPPFLAGS = -I$(top_srcdir)/src -I$(BOOST_INC)
 
-bin_PROGRAMS = run
+bin_PROGRAMS = run test_MssmSolver
 
 run_LDADD = @FLIBS@ $(top_srcdir)/src/libflexisusy.a
 
 run_SOURCES = \
 	main.cpp \
+	susy.cpp \
+	softpars.cpp \
+	softsusy.cpp \
+	physpars.cpp \
+	twoloophiggs.f
+
+test_MssmSolver_LDADD = \
+	@FLIBS@ \
+	$(top_srcdir)/src/libflexisusy.a \
+	$(BOOST_LIB)/libboost_unit_test_framework.a
+
+test_MssmSolver_SOURCES = \
+	test_MssmSolver.cpp \
 	susy.cpp \
 	softpars.cpp \
 	softsusy.cpp \
