check that the user has the boost unit test framework installed

--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,11 @@ AC_PROG_F77
 AC_F77_LIBRARY_LDFLAGS
 AC_PROG_RANLIB
 
+AC_LANG_PUSH([C++])
+AC_CHECK_HEADERS([boost/test/unit_test.hpp], [],
+    [AC_MSG_ERROR(You need the Boost libraries.)])
+AC_LANG_POP([C++])
+
 AM_CXXFLAGS="-ggdb -Wall -pedantic -Wextra -Wcast-qual -Wcast-align -Woverloaded-virtual -Wnon-virtual-dtor -Wfloat-equal"
 
 AC_SUBST(FLIBS)
