add m4 macros that check for the boost unit test framework library

--- a/models/mssm/Makefile.am
+++ b/models/mssm/Makefile.am
@@ -16,7 +16,7 @@ run_SOURCES = \
 test_MssmSolver_LDADD = \
 	@FLIBS@ \
 	$(top_srcdir)/src/libflexisusy.a \
-	-lboost_unit_test_framework
+	@BOOST_UNIT_TEST_FRAMEWORK_LIB@
 
 test_MssmSolver_SOURCES = \
 	test_MssmSolver.cpp \
