add @BOOST_LDFLAGS@ and put fortran libs at the very end to ensure that the boost libraries are taken from they @BOOST_LDFLAGS@ directory

--- a/models/mssm/Makefile.am
+++ b/models/mssm/Makefile.am
@@ -14,9 +14,10 @@ run_SOURCES = \
 	twoloophiggs.f
 
 test_MssmSolver_LDADD = \
-	@FLIBS@ \
 	$(top_srcdir)/src/libflexisusy.a \
-	@BOOST_UNIT_TEST_FRAMEWORK_LIB@
+	@BOOST_LDFLAGS@ \
+	@BOOST_UNIT_TEST_FRAMEWORK_LIB@ \
+	@FLIBS@
 
 test_MssmSolver_SOURCES = \
 	test_MssmSolver.cpp \
