--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,7 @@ AC_CONFIG_FILES([doc/Makefile])
 AC_CONFIG_FILES([test/Makefile])
 AC_CONFIG_FILES([models/Makefile])
 AC_CONFIG_FILES([models/sm/Makefile])
+AC_CONFIG_FILES([models/smcw/Makefile])
 AC_CONFIG_FILES([models/mssm/Makefile])
 
 AC_OUTPUT
