distribute header files

--- a/models/smcw/Makefile.am
+++ b/models/smcw/Makefile.am
@@ -1,5 +1,9 @@
 AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/models/sm
 
+EXTRA_DIST = \
+	smcw.hpp \
+	smcw_two_scale.hpp
+
 bin_PROGRAMS = run
 
 run_LDADD = @FLIBS@ $(top_srcdir)/src/libflexisusy.a
