--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,26 @@
+AM_CPPFLAGS = \
+	-I$(top_srcdir)/src
+
+EXTRA_DIST = \
+	constraint.hpp \
+	def.h \
+	dilog.h \
+	linalg.h \
+	logger.hpp \
+	lowe.h \
+	matching.hpp \
+	mycomplex.h \
+	numerics.h \
+	rge.h \
+	rg_flow.hpp \
+	two_scale_constraint.hpp \
+	two_scale_matching.hpp \
+	two_scale_model.hpp \
+	two_scale_solver.hpp \
+	utils.h \
+	xpr-base.h \
+	xpr-matrix.h \
+	xpr-vector.h
 
 noinst_LIBRARIES = libflexisusy.a
 
