ensure that libraries are built before executables

--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -21,7 +21,7 @@ ALLEXE   :=
 .PHONY:  all allhdr allexec alllib \
 	 clean clean-dep distclean tag release
 
-all:     allhdr allexec alllib
+all:     allhdr alllib allexec
 
 include $(patsubst %, %/module.mk, $(MODULES))
 
