--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -17,8 +17,10 @@ ALLHDR   :=
 ALLLIB   :=
 # the modules add executables to this variable
 ALLEXE   :=
+# the modules add test executables to this variable
+ALLTST   :=
 
-.PHONY:  all allhdr allexec alllib \
+.PHONY:  all allhdr allexec alllib alltest \
 	 clean clean-dep distclean tag release
 
 all:     allhdr alllib allexec
@@ -36,6 +38,7 @@ endif
 allhdr:   $(ALLHDR)
 allexec:  $(ALLEXE)
 alllib:   $(ALLLIB)
+alltest:  $(ALLTST)
 
 clean-dep:
 	rm -rf $(ALLDEP)
