Make library extension configurable.  This enables support for native Windows.  I also managed to compile and use libraries instead of static ones via
   ./configure --make-lib-cmd="gcc -shared -o" --cxxflags="-fPIC" --fflags="-fPIC" --libext=".so"

--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -6,6 +6,7 @@ LIBS     := @LIBS@
 CXX      := @CXX@
 FC       := @FC@
 MAKELIB  := @MAKELIB@
+LIBEXT   := @LIBEXT@
 VERSION  := @VERSION@
 PKGNAME  := @PKGNAME@
 
