Add global variable `ALGORITMS' that contains the algorithms to use. Depending on its value we exclude some files from being compiled.

--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -10,6 +10,7 @@ MAKELIB   := @MAKELIB@
 LIBEXT    := @LIBEXT@
 VERSION   := @VERSION@
 PKGNAME   := @PKGNAME@
+ALGORITMS := two_scale
 
 # the modules add their dependency files to this variable
 ALLDEP   :=
