--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -1,16 +1,16 @@
-MODULES   := config src models/sm models/smcw models/mssm test examples doc
-CPPFLAGS  := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES))
-CXXFLAGS  := @CXXFLAGS@
-FFLAGS    := @FFLAGS@
-FLIBS     := @FLIBS@
-BOOSTLIBS := @BOOSTLIBS@
-CXX       := @CXX@
-FC        := @FC@
-MAKELIB   := @MAKELIB@
-LIBEXT    := @LIBEXT@
-VERSION   := @VERSION@
-PKGNAME   := @PKGNAME@
-ALGORITMS := @ALGORITMS@
+MODULES    := config src models/sm models/smcw models/mssm test examples doc
+CPPFLAGS   := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES))
+CXXFLAGS   := @CXXFLAGS@
+FFLAGS     := @FFLAGS@
+FLIBS      := @FLIBS@
+BOOSTLIBS  := @BOOSTLIBS@
+CXX        := @CXX@
+FC         := @FC@
+MAKELIB    := @MAKELIB@
+LIBEXT     := @LIBEXT@
+VERSION    := @VERSION@
+PKGNAME    := @PKGNAME@
+ALGORITHMS := @ALGORITHMS@
 
 # the modules add their dependency files to this variable
 ALLDEP   :=
@@ -60,18 +60,18 @@ distclean::
 	-rm -f Makefile
 
 showbuild:
-	@echo "PKGNAME   = $(PKGNAME)"
-	@echo "VERSION   = $(VERSION)"
-	@echo "CXX       = $(CXX)"
-	@echo "CPPFLAGS  = $(CPPFLAGS)"
-	@echo "CXXFLAGS  = $(CXXFLAGS)"
-	@echo "FC        = $(FC)"
-	@echo "FFLAGS    = $(FFLAGS)"
-	@echo "MAKELIB   = $(MAKELIB)"
-	@echo "LIBEXT    = $(LIBEXT)"
-	@echo "FLIBS     = $(FLIBS)"
-	@echo "BOOSTLIBS = $(BOOSTLIBS)"
-	@echo "ALGORITMS = $(ALGORITMS)"
+	@echo "PKGNAME    = $(PKGNAME)"
+	@echo "VERSION    = $(VERSION)"
+	@echo "CXX        = $(CXX)"
+	@echo "CPPFLAGS   = $(CPPFLAGS)"
+	@echo "CXXFLAGS   = $(CXXFLAGS)"
+	@echo "FC         = $(FC)"
+	@echo "FFLAGS     = $(FFLAGS)"
+	@echo "MAKELIB    = $(MAKELIB)"
+	@echo "LIBEXT     = $(LIBEXT)"
+	@echo "FLIBS      = $(FLIBS)"
+	@echo "BOOSTLIBS  = $(BOOSTLIBS)"
+	@echo "ALGORITHMS = $(ALGORITHMS)"
 	@echo ""
 	@echo "The list of modules to be built:"
 	@echo "--------------------------------"
