Write the Mathematica kernel command into the Makefile and print out a warning if Mathematica is not installed.

--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -11,6 +11,7 @@ LIBEXT     := @LIBEXT@
 VERSION    := @VERSION@
 PKGNAME    := @PKGNAME@
 ALGORITHMS := @ALGORITHMS@
+MATH       := @MATH@
 
 # the modules add their dependency files to this variable
 ALLDEP   :=
@@ -72,6 +73,7 @@ showbuild:
 	@echo "FLIBS      = $(FLIBS)"
 	@echo "BOOSTLIBS  = $(BOOSTLIBS)"
 	@echo "ALGORITHMS = $(ALGORITHMS)"
+	@echo "MATH       = $(MATH)"
 	@echo ""
 	@echo "The list of modules to be built:"
 	@echo "--------------------------------"
