--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -3,7 +3,7 @@ CPPFLAGS   := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
 CXXFLAGS   := @CXXFLAGS@
 FFLAGS     := @FFLAGS@
 FLIBS      := @FLIBS@
-BOOSTLIBS  := @BOOSTLIBS@
+BOOSTTESTLIBS  := @BOOSTTESTLIBS@
 BOOSTTHREADLIBS  := @BOOSTTHREADLIBS@
 BOOSTFLAGS := @BOOSTFLAGS@
 CXX        := @CXX@
@@ -78,7 +78,7 @@ showbuild:
 	@echo "MAKELIB    = $(MAKELIB)"
 	@echo "LIBEXT     = $(LIBEXT)"
 	@echo "FLIBS      = $(FLIBS)"
-	@echo "BOOSTLIBS  = $(BOOSTLIBS)"
+	@echo "BOOSTTESTLIBS  = $(BOOSTTESTLIBS)"
 	@echo "BOOSTTHREADLIBS  = $(BOOSTTHREADLIBS)"
 	@echo "BOOSTFLAGS = $(BOOSTFLAGS)"
 	@echo "GSLLIBS    = $(GSLLIBS)"
