--- a/config/Makefile.template
+++ b/config/Makefile.template
@@ -31,6 +31,9 @@ ALLEXE   :=
 # the modules add test executables to this variable
 ALLTST   :=
 
+# flexiblesusy-config script
+FSCONFIG := @FSCONFIG@
+
 .PHONY:  all allhdr allexec alllib alltest \
 	 clean clean-dep distclean showbuild tag release
 
