Bugfix: `make all' was not working, because the dependencies were not included.  This was because the MAKECMDGOALS == all could be found in the comparison string, which contained "all-doc".
The secure way of fixing the bug is explicitely checking the
content of MAKECMDGOALS for not being equal to clean, distclean,
showbuild, tag, release and doc.

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -41,11 +41,20 @@ all:     allhdr alllib allexec
 
 include $(patsubst %, %/module.mk, $(MODULES))
 
-ifeq ($(findstring $(MAKECMDGOALS),clean distclean \
-      showbuild tag release all-doc),)
+ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(MAKECMDGOALS),distclean)
+ifneq ($(MAKECMDGOALS),showbuild)
+ifneq ($(MAKECMDGOALS),tag)
+ifneq ($(MAKECMDGOALS),release)
+ifneq ($(MAKECMDGOALS),doc)
 ifeq ($(findstring clean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring distclean-,$(MAKECMDGOALS)),)
 -include $(ALLDEP)
+endif
+endif
+endif
+endif
+endif
 endif
 endif
 endif
