--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -1,4 +1,4 @@
-MODULES    := config src @MODELS@ test examples doc
+MODULES    := config src meta templates @MODELS@ test examples doc
 CPPFLAGS   := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
 CXXFLAGS   := @CXXFLAGS@
 FFLAGS     := @FFLAGS@
