name the model files after the model, in order to avoid conflics in case of multiple models/ EFTs

--- a/templates/highScaleConstraint.cpp.in
+++ b/templates/highScaleConstraint.cpp.in
@@ -1,6 +1,6 @@
 
-#include "highScaleConstraint.hpp"
-#include "model.hpp"
+#include "@ModelName@_highScaleConstraint.hpp"
+#include "@ModelName@_model.hpp"
 #include "wrappers.hpp"
 #include "logger.hpp"
 
