--- a/templates/lowScaleConstraint.cpp.in
+++ b/templates/lowScaleConstraint.cpp.in
@@ -1,6 +1,6 @@
 
-#include "lowScaleConstraint.hpp"
-#include "model.hpp"
+#include "@ModelName@_lowScaleConstraint.hpp"
+#include "@ModelName@_model.hpp"
 #include "wrappers.hpp"
 #include "logger.hpp"
 #include "ew_input.hpp"
