--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -16,7 +16,7 @@
 // <http://www.gnu.org/licenses/>.
 // ====================================================================
 
-#include "model.hpp"
+#include "@ModelName@_model.hpp"
 #include "wrappers.hpp"
 #include "logger.hpp"
 
