--- a/templates/convergenceTester.cpp.in
+++ b/templates/convergenceTester.cpp.in
@@ -1,5 +1,5 @@
 
-#include "convergenceTester.hpp"
+#include "@ModelName@_convergenceTester.hpp"
 
 @ModelName@_convergence_tester::@ModelName@_convergence_tester(@ModelName@*, double)
 {
