--- a/templates/lowScaleConstraint.hpp.in
+++ b/templates/lowScaleConstraint.hpp.in
@@ -2,7 +2,7 @@
 #ifndef @ModelName@_LOW_SCALE_CONSTRAINT_H
 #define @ModelName@_LOW_SCALE_CONSTRAINT_H
 
-#include "inputPars.hpp"
+#include "@ModelName@_inputPars.hpp"
 
 class @ModelName@;
 
